Display image only if it exists

--- a/src/Resources/views/Property/image.html.twig
+++ b/src/Resources/views/Property/image.html.twig
@@ -1,1 +1,3 @@
-<img src="{{ value }}" title="{{ record.getValue('label') }}" width="30" height="30">
+{% if value != '' %}
+    <img src="{{ value }}" title="{{ record.getValue('label') }}" width="30" height="30">
+{% endif %}
